--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html ng-app='app'>
   <head>
     <meta charset="utf-8">
-    <script src="node_modules/angular/angular.min.js"></script>
-    <script src="node_modules/angular-route/angular-route.js"></script>  
-    <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>    
+    <script src="lib/angular.min.js"></script>
+    <script src="lib/angular-route.min.js"></script>  
+    <script src="lib/angular-ui-router.min.js"></script>    
     <script src="app.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
