--- a/home.html
+++ b/home.html
@@ -164,6 +164,7 @@
       <div ng-show="ctrl.showResult"><h2>{{ctrl.note}}</h2></div>
     </div>
     <div style="width:100%;float: left;text-align: center;margin: 50px"><button style="width:100px" ng-click="ctrl.fin()">FIN</button></div>
-  </div> 
+  </div>
 </div>
+<div ng-click="ctrl.recap()"><a>lien</a></div>
 <ui-view></ui-view>
