--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="lib/angular-route.min.js"></script>  
     <script src="lib/angular-ui-router.min.js"></script>    
     <script src="app.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>TEST</title>
   </head>
