--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <h3>Choisissez un cas</h3>
     <button ng-click="ctrl.showTest(1)">CAS 1</button>
     <button ng-click="ctrl.showTest(2)">CAS 2</button>
-    <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
+    <button id="authorize-button" class="btn btn-primary">Authorize</button>
   </div>
 </div>
 <div id="first" ng-if="ctrl.firstSelected">
