--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   </head>
   <body>
     <ui-view></ui-view>
+    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   </body>
 </html>
