--- a/correction.html
+++ b/correction.html
@@ -1,4 +1,85 @@
 <div class="container" style="margin-bottom: 20px">
+  <div ng-if="$state.params.test == 1">
+    <h3>Public cible:</h3>
+    <p>étudiants en médecine 4ème année de médecine en pédiatrie, internes en médecine.</p>
+    <h3>Prérequis:</h3>
+    <ul>
+      <li>
+        cours  déshydratation aigue (DCEM2)
+      </li>
+      <li>
+        Cours diarrhée aigue (DCEM2)
+      </li>
+    </ul>
+    <h3>Objectifs éducationnels:</h3>
+    <p>À l’issue de cet apprentissage, l’étudiant sera capable de:</p>
+    <ul>
+      <li>
+        Poser le diagnostic de déshydratation aigue du nourrisson
+      </li>
+      <li>
+        Évaluer le stade de déshydratation du nourrisson en sa basant sur des éléments cliniques
+      </li>
+      <li>
+        Planifier la prise en charge d’une déshydratation aigue par gastroentérite du nourrisson en fonction de son stade
+      </li>
+    </ul>
+  </div>
+  <div ng-if="$state.params.test == 2">
+      <h3>Public cible:</h3>
+      <p>étudiants en médecine 4ème année de médecine en pédiatrie, internes en médecine.</p>
+      <h3>Prérequis:</h3>
+      <ul>
+        <li>
+          Cours  urgences métaboliques (DCEM2)
+        </li>
+        <li>
+          Cours détresse respiratoire néonatale (DCEM2)
+        </li>
+      </ul>
+      <h3>Objectifs éducationnels:</h3>
+      <p>À l’issue de cet apprentissage, l’étudiant sera capable de:</p>
+      <ul>
+        <li>
+          Poser le diagnostic d’une détresse néonatale sur des arguments cliniques
+        </li>
+        <li>
+          Évaluer le stade de déshydratation du nourrisson en sa basant sur des éléments cliniques
+        </li>
+        <li>
+          Planifier la prise en charge d’un nouveau-né en détresse
+        </li>
+      </ul>
+    </div>
+    <div ng-if="$state.params.test == 3">
+    <h3>Public cible:</h3>
+    <p>étudiants en médecine 4 ème année de médecine en pédiatrie, internes en médecine, résidents de médecine de famille.</p>
+    <h3>Prérequis:</h3>
+    <ul>
+      <li>
+        Cours fièvre de l’enfant (DCEM2)
+      </li>
+      <li>
+        Cours purpura (DCEM2)
+      </li>
+    </ul>
+    <h3>Objectifs éducationnels:</h3>
+    <p>À l’issue de cet apprentissage, l’étudiant sera capable de:</p>
+    <ul>
+      <li>
+        Évoquer le diagnostic d’une hémopathie maligne en se basant sur les éléments cliniques
+      </li>
+      <li>
+        Prescrire les examens complémentaires afin de confirmer une hémopathie maligne
+      </li>
+      <li>
+        Évaluer le pronostic immédiat chez un enfant suspect d’une hémopathie maligne
+      </li>
+      <li>
+        Planifier la prise en charge thérapeutique immédiate chez un enfant suspect d’hémopathie maligne
+      </li>
+    </ul>
+  </div>
   <h1>CORRECTION DETAILLEE</h1>
   <div class="col-md-12" ng-repeat="item in correction.selectedList">
     <div class="col-md-6" style="margin: 10px 0"><h4>Reponse</h4></div>
