--- a/correction.html
+++ b/correction.html
@@ -1,4 +1,5 @@
 <div class="container" style="margin-bottom: 20px">
+  {{$state.params.test}}
   <div ng-if="$state.params.test == 1">
     <h3>Public cible:</h3>
     <p>étudiants en médecine 4ème année de médecine en pédiatrie, internes en médecine.</p>
