--- a/home.html
+++ b/home.html
@@ -94,10 +94,10 @@
       </div>
       <div ng-show="ctrl.showResult">
         <h2>SCORE FINAL</h2>
+        <h2>{{ctrl.score}}</h2>
+        <h2>NOTE</h2>
+        <h2>{{ctrl.note}}/20</h2>
       </div>
-      <div ng-show="ctrl.showResult"><h2>{{ctrl.score}}</h2></div>
-      <h2>NOTE</h2>
-      <div><h2>{{ctrl.note}}/20</h2></div>
     </div>
     <div style="width:100%;float: left;text-align: center;margin: 50px"><button style="width:100px" ng-click="ctrl.fin()">FIN</button></div>
   </div> 
@@ -164,10 +164,10 @@
       </div>
       <div ng-show="ctrl.showResult">
         <h2>SCORE FINAL</h2>
+        <h2>{{ctrl.score}}</h2>
+        <h2>NOTE</h2>
+        <h2>{{ctrl.note}}/20</h2>
       </div>
-      <div ng-show="ctrl.showResult"><h2>{{ctrl.score}}</h2></div>
-      <h2>NOTE</h2>
-      <div><h2>{{ctrl.note}}/20</h2></div>
     </div>
     <div style="width:100%;float: left;text-align: center;margin: 50px"><button style="width:100px" ng-click="ctrl.fin()">FIN</button></div>
   </div>
@@ -252,10 +252,10 @@
       </div>
       <div ng-show="ctrl.showResult">
         <h2>SCORE FINAL</h2>
+        <h2>{{ctrl.score}}</h2>
+        <h2>NOTE</h2>
+        <h2>{{ctrl.note}}/20</h2>
       </div>
-      <div ng-show="ctrl.showResult"><h2>{{ctrl.score}}</h2></div>
-      <h2>NOTE</h2>
-      <div><h2>{{ctrl.note}}/20</h2></div>
     </div>
     <div style="width:100%;float: left;text-align: center;margin: 50px"><button style="width:100px" ng-click="ctrl.fin()">FIN</button></div>
   </div>
