--- a/correction.html
+++ b/correction.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin-bottom: 20px">
   <div ng-if="correction.testId == 1">
-    <h3>Public cible:</h3>
+    <h3 id="objectif">Public cible:</h3>
     <p>étudiants en médecine 4ème année de médecine en pédiatrie, internes en médecine.</p>
     <h3>Prérequis:</h3>
     <ul>
