--- a/home.html
+++ b/home.html
@@ -257,7 +257,7 @@
         <h2>{{ctrl.note}}/20</h2>
       </div>
     </div>
-    <div style="width:100%;float: left;text-align: center;margin: 50px"><button style="width:100px" ng-click="ctrl.fin()">FIN</button></div>
+    <div style="width:100%;float: left;text-align: center;margin: 50px"><button style="width:100px" href="#objectif" ng-click="ctrl.fin()">FIN</button></div>
   </div>
 </div>
 <!-- <div ng-click="ctrl.recap()"><a>lien</a></div> -->
