--- a/correction.html
+++ b/correction.html
@@ -1,5 +1,5 @@
 <div id="objectif" class="container" style="margin-bottom: 20px">
-  <div style="position:fixed; width:inherit; background:#eee;top:0px;height:50px;text-align: center;padding: 10px;">
+  <div style="position:fixed; width:inherit; background:#eee;top:0px;height:50px;text-align: center;padding: 10px;z-index:1">
     <p>Merci de donner votre avis <a href="https://docs.google.com/forms/d/1tl1IOAlZbhhkmzHfrsIzOR2HBe4DocUjvpVR7SnLR6k/prefill" target="_blank">ici</a></p>
   </div>
   <div ng-if="correction.testId == 1">
